# mlops-2025

./: .gitignore  LICENSE  README.md  evaluate.py  featurize.py  predict.py  pyproject.toml
notebooks/: titanic-survival.ipynb
scripts/: preprocess.py
src/mlops_2025/: __init__.py
